--- a/src/main/resources/view/PaymentView.fxml
+++ b/src/main/resources/view/PaymentView.fxml
@@ -1,19 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import com.jfoenix.controls.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="806.0" style="-fx-background-color: #fff;" 
-            xmlns="http://javafx.com/javafx/22" 
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.example.orm.controller.PaymentController">
+<AnchorPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="806.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.orm.controller.PaymentController">
    <children>
       <TableView fx:id="paymentTbl" layoutX="100.0" layoutY="245.0" prefHeight="200.0" prefWidth="606.0">
         <columns>
@@ -22,9 +16,9 @@
             <TableColumn fx:id="patIdCol" prefWidth="144.0" text="Patcient ID" />
         </columns>
       </TableView>
-      <ImageView fitHeight="97.0" fitWidth="90.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="95.0" fitWidth="130.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true">
          <image>
-            <Image url="@../assests/logo%20(2).png" />
+            <Image url="@../assests/pngtree-mental-health-problems-flat-illustration.png" />
          </image>
       </ImageView>
       <JFXButton layoutX="33.0" layoutY="495.0" onAction="#gotoBack" text="Back">
@@ -35,10 +29,11 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <Label layoutX="266.0" layoutY="136.0" text="View All Paymets">
+      <Label layoutX="266.0" layoutY="136.0" text="View All Payments">
          <font>
-            <Font name="Gabarito Regular" size="36.0" />
+            <Font name="System Bold" size="36.0" />
          </font>
       </Label>
+      <Label layoutX="41.0" layoutY="92.0" text="Label" />
    </children>
 </AnchorPane>
