--- a/src/main/resources/view/PatcientView.fxml
+++ b/src/main/resources/view/PatcientView.fxml
@@ -36,7 +36,7 @@
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></JFXButton>
-      <JFXButton fx:id="updateBtn" layoutX="550.0" layoutY="257.0" onAction="#updatePatcient" prefHeight="34.0" prefWidth="90.0" style="-fx-background-color: yellow;" text="Update" textFill="#fcfcfc">
+      <JFXButton fx:id="updateBtn" layoutX="550.0" layoutY="257.0" onAction="#updatePatcient" prefHeight="34.0" prefWidth="90.0" style="-fx-background-color: #0d6efd;" text="Update" textFill="#fcfcfc">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
@@ -97,6 +97,11 @@
       <Label layoutX="38.0" layoutY="95.0" text="MindVista">
          <font>
             <Font name="Times New Roman Bold" size="15.0" />
+         </font>
+      </Label>
+      <Label layoutX="280.0" layoutY="15.0" text="manage Patients">
+         <font>
+            <Font size="30.0" />
          </font>
       </Label>
    </children>
