--- a/src/main/resources/view/ProgrammeView.fxml
+++ b/src/main/resources/view/ProgrammeView.fxml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import com.jfoenix.controls.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="pane" prefHeight="550.0" prefWidth="806.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.orm.controller.ProgrammeController">
+<AnchorPane fx:id="pane" prefHeight="550.0" prefWidth="806.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.orm.controller.ProgrammeController">
    <children>
       <TextField fx:id="nameTxt" layoutX="77.0" layoutY="158.0" prefHeight="42.0" prefWidth="364.0" promptText="Name" style="-fx-padding: 0 15; -fx-background-color: #fafafa;" />
       <TextField fx:id="durationTxt" layoutX="77.0" layoutY="225.0" prefHeight="42.0" prefWidth="214.0" promptText="Duration " style="-fx-padding: 0 15; -fx-background-color: #fafafa;" />
@@ -24,28 +20,27 @@
             <TableColumn fx:id="feesCol" prefWidth="135.199951171875" text="Fees" />
         </columns>
       </TableView>
-      <JFXButton fx:id="savebtn" layoutX="455.0" layoutY="160.0" onAction="#saveProgramme" prefHeight="42.0" prefWidth="120.0" style="-fx-background-color: #0d6efd;" text="Save" textFill="#fcfcfc">
+      <JFXButton fx:id="savebtn" layoutX="455.0" layoutY="160.0" onAction="#saveProgramme" prefHeight="42.0" prefWidth="120.0" style="-fx-background-color: green;" text="Save" textFill="#fcfcfc">
          <font>
-            <Font name="Gabarito Regular" size="13.0" />
+            <Font name="System Bold" size="15.0" />
          </font>
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></JFXButton>
       <JFXButton fx:id="updateBtn" layoutX="581.0" layoutY="160.0" onAction="#updateProgramme" prefHeight="42.0" prefWidth="120.0" style="-fx-background-color: #0d6efd;" text="Update" textFill="#fcfcfc">
          <font>
-            <Font name="Gabarito Regular" size="13.0" />
+            <Font size="15.0" />
          </font>
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></JFXButton>
-      <JFXButton fx:id="deleteBtn" layoutX="581.0" layoutY="225.0" onAction="#deleteProgramme" prefHeight="42.0" prefWidth="120.0" style="-fx-background-color: #0d6efd;" text="Delete" textFill="#fcfcfc">
+      <JFXButton fx:id="deleteBtn" layoutX="581.0" layoutY="225.0" onAction="#deleteProgramme" prefHeight="42.0" prefWidth="120.0" style="-fx-background-color: red;" text="Delete" textFill="#fcfcfc">
          <font>
-            <Font name="Gabarito Regular" size="13.0" />
+            <Font name="System Bold" size="15.0" />
          </font>
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></JFXButton>
-      <Label layoutX="-60.0" layoutY="-58.0" text="Label" />
       <Label fx:id="idLbl" layoutX="689.0" layoutY="20.0" prefHeight="28.0" prefWidth="86.0" text="Label">
          <font>
             <Font name="System Bold" size="17.0" />
@@ -65,9 +60,9 @@
             <Font name="Gabarito Regular" size="12.0" />
          </font>
       </Label>
-      <ImageView fitHeight="98.0" fitWidth="93.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="95.0" fitWidth="130.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true">
          <image>
-            <Image url="@../assests/logo%20(2).png" />
+            <Image url="@../assests/pngtree-mental-health-problems-flat-illustration.png" />
          </image>
       </ImageView>
       <JFXButton layoutX="46.0" layoutY="502.0" onAction="#gotoBack" text="Back">
@@ -78,5 +73,9 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
+      <Label layoutX="49.0" layoutY="104.0" text="MindVista">
+         <font>
+            <Font name="Times New Roman Bold" size="15.0" />
+         </font></Label>
    </children>
 </AnchorPane>
