--- a/src/main/resources/view/RicieptionChoiceView.fxml
+++ b/src/main/resources/view/RicieptionChoiceView.fxml
@@ -1,33 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import com.jfoenix.controls.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="806.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.orm.controller.RicieptionChoiceController">
+<AnchorPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="806.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.orm.controller.RicieptionChoiceController">
    <children>
-      <ImageView fitHeight="110.0" fitWidth="102.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="95.0" fitWidth="130.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true">
          <image>
-            <Image url="@../assests/logo%20(2).png" />
+            <Image url="@../assests/pngtree-mental-health-problems-flat-illustration.png" />
          </image>
       </ImageView>
-      <Label layoutX="248.0" layoutY="147.0" text="Riview Cloice Panel" textFill="#333333">
+      <Label layoutX="144.0" layoutY="118.0" text="Choose a Action For Receptionist" textFill="#333333">
          <font>
             <Font name="Gabarito Regular" size="36.0" />
          </font>
       </Label>
-      <Label layoutX="230.0" layoutY="190.0" text="Manage Sessions , Patcients and Payments with ease and control." textFill="#333333">
+      <Label layoutX="230.0" layoutY="172.0" text="Manage Sessions , Patcients and Payments with ease and control." textFill="#333333">
          <font>
             <Font name="Gabarito Regular" size="12.0" />
          </font>
       </Label>
-      <JFXButton layoutX="69.0" layoutY="253.0" onAction="#gotoSession" prefHeight="122.0" prefWidth="206.0" style="-fx-border-color: #0d6efd; -fx-background-color: #fff;" text="Manage Sessions" textFill="#0d6efd">
+      <JFXButton layoutX="69.0" layoutY="253.0" onAction="#gotoSession" prefHeight="122.0" prefWidth="206.0" style="-fx-border-color: #2fd723; -fx-background-color: #fff;" text="Manage Sessions" textFill="#2fd723">
          <font>
-            <Font name="Gabarito Regular" size="15.0" />
+            <Font name="System Bold" size="16.0" />
          </font>
          <cursor>
             <Cursor fx:constant="HAND" />
@@ -46,21 +45,26 @@
             <Image url="@../assests/4-removebg-preview.png" />
          </image>
       </ImageView>
-      <JFXButton layoutX="530.0" layoutY="253.0" onAction="#gotoPayment" prefHeight="122.0" prefWidth="206.0" style="-fx-border-color: #0d6efd; -fx-background-color: #fff;" text="Manage Payments" textFill="#0d6efd">
+      <JFXButton layoutX="530.0" layoutY="253.0" onAction="#gotoPayment" prefHeight="122.0" prefWidth="206.0" style="-fx-border-color: #2fd723; -fx-background-color: #fff;" text="Manage Payments" textFill="#2fd723">
          <font>
-            <Font name="Gabarito Regular" size="15.0" />
+            <Font name="System Bold" size="16.0" />
          </font>
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton layoutX="299.0" layoutY="253.0" onAction="#gotopatcient" prefHeight="122.0" prefWidth="206.0" style="-fx-border-color: #0d6efd; -fx-background-color: #fff;" text="Manage Patcients" textFill="#0d6efd">
+      <JFXButton layoutX="299.0" layoutY="253.0" onAction="#gotopatcient" prefHeight="122.0" prefWidth="206.0" style="-fx-border-color: #2fd723; -fx-background-color: #fff;" text="Manage Patients" textFill="#2fd723">
          <font>
-            <Font name="Gabarito Regular" size="15.0" />
+            <Font name="System Bold" size="16.0" />
          </font>
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
+      <Label layoutX="45.0" layoutY="90.0" text="MindVista">
+         <font>
+            <Font name="Times New Roman Bold" size="15.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
